Add new UI changes

--- a/style.css
+++ b/style.css
@@ -1,41 +1,64 @@
 * {
   box-sizing: border-box;
   border: 2px solid gold;
-}
-
-body {
   margin: 0;
   padding: 0;
 }
 
-/* Toolbox in navigation bar */
+body {
+  margin: 0.5rem 1rem;
+  padding: 0;
+  background-color: #0d1323;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
 
-.tools-container {
-  height: 5rem;
+h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  text-align: center;
+}
+
+/* Header */
+.header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: space-around;
 }
 
-.tools-priority-container {
-  height: 3rem;
-  width: 30%;
-  display: flex;
-  justify-content: center;
-  gap: 2rem;
-}
-
-.color-box {
-  height: 3rem;
-  width: 3rem;
-}
-
-.tools-action-container {
+.action-container {
   height: 3rem;
   width: 20%;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 2rem;
+}
+
+.action-container > div {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 20%;
+  background-color: greenyellow;
+}
+
+/* Toolbox in navigation bar */
+
+.priority-container {
+  top: 30%;
+  position: fixed;
+  height: 20rem;
+  width: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.color-box {
+  height: 4rem;
+  width: 4rem;
+  background-color: blue;
+  border-radius: 10%;
 }
 
 .tools-action {
